--- a/css/style.css
+++ b/css/style.css
@@ -93,11 +93,18 @@ h2 {
 	font-style: italic;
 	/* is there a way to combine the italic into the font-weight attribute or does it need a separate font-style attribute? */
 }
-.line-through {
+/*.line-through {
 	text-decoration: line-through;
 	color: rgba(0,0,0,.25)
 }
 .underline {
+	border-bottom: solid 3px #fdf731;
+}*/
+del {
+	color: rgba(0,0,0,.25);
+}
+ins {
+	text-decoration: none;
 	border-bottom: solid 3px #fdf731;
 }
 .splash-image {
@@ -106,6 +113,7 @@ h2 {
 	background-size: cover;
 	background-position: center;
 	min-height: 400px;
+	clear: both;
 }
 .splash-overlay {
 	background-color: rgba(255,255,255,.85);
@@ -123,7 +131,7 @@ h2 {
 	font-color: black;
 	text-align: left;
 }
-p {
+p.button {
 	font-family: 'Source Sans Pro', sans-serif;
 	font-size: 20px;
 	font-weight: 400;
@@ -142,6 +150,7 @@ a.button {
 	box-shadow: 0px 3px 5px rgba(0,0,0,.35);
 	border-style: none;
 	border-radius: 5px;
+	background-color: #c6c6c6;
 }
 a.button:link {
 	color: black;
@@ -159,6 +168,34 @@ a.button:active {
 	background-color: #fdf731;
 	padding: 10px 122px;
 }
+.cta-rail {
+	background-color: #fff;
+	overflow: hidden;
+	clear: both;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+.cta {
+	float:left;
+	padding: 40px;
+	width: 400px;
+}
+.cta a{
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+#middle {
+	border-left: solid 1px #c6c6c6;
+	border-right: solid 1px #c6c6c6;
+}
+a.signup {
+	padding-left: 100px;
+	padding-right: 100px;
+}
+a.startsearch {
+	padding-left: 75px;
+	padding-right: 75px;
+}
 footer {
 	background-color: black;
 	font-family: 'Source Sans Pro', sans-serif;
@@ -168,7 +205,7 @@ footer {
 	clear: both;
 }
 footer p {
-	padding: 10px 50px;
+	padding: 30px 50px;
 	float: left;
 	color: white;
 }
@@ -178,4 +215,3 @@ footer p {
   -webkit-box-sizing: border-box; /* Safari/Chrome/iOS/Android */
   box-sizing: border-box; /* IE */
 }
-
